--- a/Produits.css
+++ b/Produits.css
@@ -113,3 +113,14 @@
     font-size:1rem;
     line-height:1.3;
   }
+
+@media (max-width: 600px) {
+  .produit-card {
+    width: 48%;
+    margin: 1%;
+    box-sizing: border-box;
+    display: inline-block;
+    vertical-align: top;
+  }
+}
+
