--- a/Produits.css
+++ b/Produits.css
@@ -57,6 +57,13 @@
     flex-direction: column;
 
     transition: transform 0.3s ease;
+
+  
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center; /* centre les cartes même s’il en manque une */
+    gap: 1rem;
+
   
   }
 
@@ -114,13 +121,13 @@
     line-height:1.3;
   }
 
+
+
+
 @media (max-width: 600px) {
   .produit-card {
     width: 48%;
-    margin: 1%;
     box-sizing: border-box;
-    display: inline-block;
-    vertical-align: top;
   }
 }
 
