--- a/Accueil.css
+++ b/Accueil.css
@@ -94,12 +94,13 @@ nav ul li a:hover {
   margin-bottom: 30px;
 }
 
-/* GRILLE PRODUITS */
-.produits-grid {
+
+ .produits-grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  gap: 20px;
+  gap: 1.5rem;
+  grid-template-columns: repeat(2, 1fr); /* Deux colonnes fixes */
 }
+
 
 /* PRODUIT */
 .produit {
